# oboromi

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  build_log.txt
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  dependabot.yml  pr-review.yml  release.yml  security.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/cpu/: cpu_manager.rs  mod.rs  unicorn_interface.rs
core/src/fs/: mod.rs
core/src/gpu/: mod.rs  sm86.rs  sm86_decoder_generated.rs  sm86_opcodes.txt  spirv.rs  state.rs
core/src/memory/: memory.rs
core/src/mmu/: mmu.rs  mod.rs  paging.rs  tlb.rs
core/src/nn/: acc.rs  adraw.rs  ahid.rs  aoc.rs  apm.rs  appletOE.rs  applet_ae.rs  applet_oe.rs  arp.rs  aud.rs  audctl.rs  auddebug.rs  auddev.rs  auddmg.rs  audin.rs  audout.rs  audrec.rs  audren.rs  audsmx.rs  avm.rs  banana.rs  batlog.rs  bcat.rs  bgtc.rs  bpc.rs  bpmpmr.rs  bsd.rs  bsdcfg.rs  bt.rs  btdrv.rs  btm.rs  btp.rs  capmtp.rs  caps.rs  caps2.rs  cec_mgr.rs  chat.rs  clkrst.rs  codecctl.rs  csrng.rs  (+122 more)
core/src/sys/: mod.rs
core/src/tests/: run.rs
docs/: ARCHITECTURE.md
gui/src/: main.rs
gui/src/gui/: gui.rs
oboromi-core/: Cargo.toml  build.rs
oboromi-core/src/: dynarmic_sys.rs  lib.rs  spirv.rs
oboromi-core/src/cpu/: dynarmic_interface.rs  mod.rs  old_cpu.rs
oboromi-core/src/gpu/: mod.rs  sm86.rs  spirv.rs  state.rs
oboromi-core/src/input/: mod.rs
oboromi-core/src/memory/: memory.rs  mod.rs
oboromi-core/src/mmu/: mmu.rs  mod.rs  paging.rs  tlb.rs
oboromi-core/src/nn/: acc.rs  adraw.rs  ahid.rs  appletAE.rs  arp.rs  audin.rs  audout.rs  audsmx.rs  bpc.rs  btp.rs  cec_mgr.rs  chat.rs  dauth.rs  disp.rs  dispdrv.rs  ectx.rs  erpt.rs  es.rs  ethc.rs  eupld.rs  fan.rs  fgm.rs  file_io.rs  fsp_ldr.rs  fsp_pr.rs  gpuk.rs  hidbus.rs  host1x.rs  hwopus.rs  ins.rs  ldn.rs  led.rs  lr.rs  miiimg.rs  mnpp.rs  mod.rs  nfp.rs  ngct.rs  npns.rs  ns.rs  (+27 more)
oboromi-core/src/tests/: run.rs
oboromi-gui/: Cargo.toml
oboromi-gui/src/: main.rs
oboromi-gui/src/gui/: gui.rs
src/: lib.rs  main.rs
src/cpu/: cpu.rs  mod.rs
src/fs/: mod.rs
src/gpu/: mod.rs
src/gui/: gui.rs  mod.rs
src/input/: mod.rs
src/memory/: memory.rs  mod.rs
src/mmu/: mmu.rs  mod.rs  paging.rs
src/tests/: mod.rs
tests/: cpu_tests.rs  manual_tests.rs
tools/gen_decoder/: Cargo.toml
tools/gen_decoder/src/: main.rs
