[workspace]
resolver = "3"
members = [
  "oboromi-core",
  "oboromi-gui",
]

[workspace.dependencies]
bitflags = "2.9"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
crossbeam-channel = "0.5"
egui = "0.32"
eframe = "0.32"
serde = "1.0"
thiserror = "2.0"
oboromi-core = { path = "oboromi-core" }
