[workspace]
resolver = "3"
members = [
  "oboromi-core",
  "oboromi-gui",
]

[workspace.dependencies]
cc = "1.2"
bitflags = "2.10"
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
crossbeam-channel = "0.5"
egui = "0.32"
eframe = "0.32"
serde = "1.0"
thiserror = "2.0"
oboromi-core = { path = "oboromi-core" }
