[package]
name = "oboromi-core"
version = "0.0.1"
edition = "2024"
authors = ["Nikilite"]
license = "MPL-2.0"
description = "Core emulator library for oboromi"

[lib]
path = "src/lib.rs"

[dependencies]
bitflags = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
fern = { version = "0.7", features = ["colored"] }
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
unicorn-engine = "2.1.1"

[dev-dependencies]
criterion = "0.7"

[features]
default = []
trace = []
debug-asserts = []
jupyter = []
